src/test/resources/frontendReference/invalid/syntaxErr/basic/multipleBegins.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 15:0 -- mismatched input 'begin' expecting <EOF>
1 parser error(s) detected, no further compilation attempted.
